# testrepo1

./: .bazelrc  MODULE.bazel  renovate.json
.github/: renovate.json
examples/simple/: MODULE.bazel
