module(
    name = "my_test_repo",
    version = "0.0.0",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.15.0")

bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.13.0",
    dev_dependency = True,
)

git_override(
    module_name = "cgrindel_bazel_starlib",
    commit = "1a490bda9cffc538042fe59abb330960dc7433e8",
    remote = "https://github.com/cgrindel/bazel-starlib.git",
)
